--- a/css/style.css
+++ b/css/style.css
@@ -3,8 +3,12 @@
 @import url(https://fonts.googleapis.com/css?family=Overlock:400,700italic);
 @import url(https://fonts.googleapis.com/css?family=Marck+Script);
 
-/* header */
+/* Footer */
+footer {
+  margin-top: 5em;
+}
 
+/* header */
 header {
   position: fixed;
   width: 100%;
@@ -38,20 +42,24 @@ body {
   width: 25%;
 }
 
-.linkedin img{
-  width: 1.875em;
-  display: inline-block;
-  
+.icons a:hover {
+  text-decoration: none;
 }
 
-.twitter img{
-  width: 1.875em;
+.icons div {
   display: inline-block;
 }
 
-.email-me img{
-  width: 1.875em;
-  display: inline-block;
+.linkedin {
+  height: 1.875em;
+}
+
+.twitter {
+  height: 1.875em;
+}
+
+.email-me {
+  height: 2.1em;
   border-radius: 25%;
 }
 
@@ -74,7 +82,7 @@ nav ul {
   padding: 0;
 }
 
-ul{
+ul {
   margin: 0 auto;
   padding: 0;
 }
@@ -118,10 +126,6 @@ p {
   margin: 0 auto;
 }
 
-
-/* Bio */
-
-
 /* resume */
 
 .resume-list {
@@ -141,7 +145,7 @@ p {
   padding: 0;
   margin: 0 auto;
   text-align: center;
-  max-width: 100%;
+  max-width: 80%;
 }
 
 .portfolio-grid li {
@@ -182,8 +186,7 @@ p {
     width: 100%;
     margin: 0;
     display: block;
-    }
-  
+  }
   /* Navigation   */
   nav ul {
     margin: 0;
@@ -191,16 +194,18 @@ p {
   nav {
     padding: none;
   }
-  
-.portfolio-grid li > a,
-.portfolio-grid li > a img {
-  transition: none;
+/*  Portfolio  */
+  .portfolio-grid li > a,
+  .portfolio-grid li > a img {
+    transition: none;
+    width: 266px;
+    height: 200px;
   }
-  
+
  .portfolio-grid li > a img:hover {
-   border-radius: none;
-  }
-  
-/*   .clear {
-    clear: both;
-  } */
+  border-radius: none;
+ }
+}
+
+
+
